--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --text-contents: #524437;
   --text-title: #2C231E;
   --text-point: linear-gradient(180deg, #FF5733 0%, #F90 100%);
-  --text-subtitle: #47FF18;
+  --text-subtitle: #FF7C17;
 }
 @font-face {
   font-family: 'Pretendard';
